feat:  Add prototype weapons detection functionality to images
