# server/src/infra/repositories/machine-learning.repository.ts
@@ -8,7 +8,6 @@ import {
   ModelType,
   RecognitionConfig,
   TattoosRecognitionConfig,
-  MediaMode,
   TextModelInput,
   VisionModelInput,
 } from '@app/domain';
